@@ -119,6 +119,10 @@ namespace IGFD
 #ifndef FILTER_COMBO_WIDTH
 #define FILTER_COMBO_WIDTH 150.0f
 #endif // FILTER_COMBO_WIDTH
+// begin combo widget
+#ifndef IMGUI_BEGIN_COMBO
+#define IMGUI_BEGIN_COMBO ImGui::BeginCombo
+#endif // IMGUI_BEGIN_COMBO
 // for lets you define your button widget
 // if you have like me a special bi-color button
 #ifndef IMGUI_PATH_BUTTON
@@ -1245,7 +1249,7 @@ namespace IGFD
 			bool needToApllyNewFilter = false;
 
 			ImGui::PushItemWidth(FILTER_COMBO_WIDTH);
-			if (ImGui::BeginCombo("##Filters", prSelectedFilter.filter.c_str(), ImGuiComboFlags_None))
+			if (IMGUI_BEGIN_COMBO("##Filters", prSelectedFilter.filter.c_str(), ImGuiComboFlags_None))
 			{
 				intptr_t i = 0;
 				for (const auto& filter : prParsedFilters)
@@ -5545,12 +5549,12 @@ IMGUIFILEDIALOG_API IGFD_Selection IGFD_GetSelection(ImGuiFileDialog* vContext)
 				// filePathName
 				if (!s.second.empty())
 				{
-					size_t siz = s.first.size() + 1U;
+					size_t siz = s.second.size() + 1U;
 					pair->filePathName = new char[siz];
 #ifndef _MSC_VER
-					strncpy(pair->filePathName, s.first.c_str(), siz);
+					strncpy(pair->filePathName, s.second.c_str(), siz);
 #else // _MSC_VER
-					strncpy_s(pair->filePathName, siz, s.first.c_str(), siz);
+					strncpy_s(pair->filePathName, siz, s.second.c_str(), siz);
 #endif // _MSC_VER
 					pair->filePathName[siz - 1U] = '\0';
 				}
